# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-02-27
# --------------------------------------------------------------------
# + add fit bin counts instead of setting bin counts - prep for the
#   multi chan fitting
# + start working on adding single and multi hit channels to the fit
# V switched to 43-add-arbitrary-chans.py
# - remove setting data bin erros for the combined fit histo because
#   tfractionfitter gives the same results either way.
# + changed backgrounds file to have fit bounds in a %
# + add signal fit scaling to be in % and relative to initial set activity


# 2017-02-23
# --------------------------------------------------------------------
# + key for "bkgs[key]['scale'] = scale" in funcs40.py for sigs
#   normalization with sigs[fskey]['fitscale']
# + scale sigs same as bkgs before doing the fitting,
#   as in - "sigs = scaleBkgs40(sigs)"
# - removed all Sumw2() in 42-try-again.py
# - removed all Sumw2() in funcs40.py
# V switched to 42-try-again.py
# ~ copy v40 to v42 and try again with smaller changes...
# + too many changes in v41 - I don't understand what's going on there
# + add Sumw2() to all data and MC histos in funcs40.py - not sure this
#   is needed but during some debugging tests it seemed like a good idea


# 2017-02-22
# --------------------------------------------------------------------
# + set any negative data-bkgs bins to 0
# ~ bunch of minor tweaks and clean up


# 2017-02-21
# --------------------------------------------------------------------
# + add noiseCuts40() in funcs40.py with Pushpa's noise cuts, this is
#   really noise cuts for loE and alpha cuts for hiE


# 2017-02-20
# --------------------------------------------------------------------